# PET-Simulation

./: .gitignore  CMakeLists.txt  README.md  backprojection_unnormalized.tif  instructions.txt  main.cpp  main_new.cpp  message.md  test.txt  windoes_config_issue_tale_April_30_2026.txt
.cache/clangd/index/: main.cpp.1AE123FA66D1DC36.idx
build-ninja/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-ninja/.cmake/api/v1/reply/: cache-v2-f423b0570d3435f64033.json  cmakeFiles-v1-6065714f96984608d935.json  codemodel-v2-14b4a390a6b3c50df9a3.json  index-2026-05-01T06-59-29-0312.json  target-PET-Debug-c5767ef253a2a8ffd693.json  target-PET_new-Debug-6f3d94ca376fb783659a.json  toolchains-v1-ca4210f387cb4a7ebe6c.json
build_ninja/: CMakeCache.txt
